--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<a href="https://githack.com/haakmal/playgrounds/blob/main/rail/rail-demo1.html">Rail demo 1</a>
+<a href="https://raw.githack.com/haakmal/playgrounds/main/rail/rail-demo1.html">Rail demo 1</a>
 </body>
 
 </html>
