--- a/projects/design-methods/index.html
+++ b/projects/design-methods/index.html
@@ -61,6 +61,7 @@
     </div>
   </div>
   <script src="script.js"></script>
+  <script src="/playgrounds/assets/inject-home-link.js"></script>
 </body>
 
 </html>
