FUTURE-THINGS: Working shuffle func, errors with AI so commented out

--- a/projects/future-thing/index.html
+++ b/projects/future-thing/index.html
@@ -45,10 +45,14 @@
 			<div id="mood-card" class="card mood"></div>
 		</div>
 	</div>
-	</div>
+</div>
+	<button id="generate-scenario">Generate Scenario ✨</button>
+	<div id="scenario-output" class="scenario-box"></div>
   </main>
 
   <script src="script.js" defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <!-- <script src="gemini.js" defer></script> -->
 
 </body>
 
