Working version of future-things

--- a/projects/future-thing/index.html
+++ b/projects/future-thing/index.html
@@ -47,6 +47,7 @@
 	</div>
 </div>
 	<button id="generate-scenario">Generate Scenario ✨</button>
+	<button id="provoke-scenario">Provoke Scenario 🧨</button>
 	<div id="scenario-output" class="scenario-box"></div>
   </main>
 
