--- a/projects/future-thing/index.html
+++ b/projects/future-thing/index.html
@@ -1,60 +1,123 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			The Thing From The FutureEmojiDice
+		</title>
+		<link rel="stylesheet" href="style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+		<link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&amp;family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&amp;family=Montserrat:ital,wght@0,100..900;1,100..900&amp;family=Oswald:wght@200..700&amp;display=swap" rel="stylesheet">
+	</head>
+	<body>
 
-<head>
-  <meta charset="UTF-8">
-  <title>The Thing From The FutureEmojiDice</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-</head>
-
-<body>
-  <main>
-    <h1><span>🔮</span> The Thing From the Future</h1>
+	        <button id="help-btn" title="Help">?</button>
+			<h1>
+				<span>🔮</span> The Thing From the Future
+			</h1><button id="shuffle-all">Shuffle All</button>
+			<div id="atom">
+				<div id="card">
+					<h2>
+						Arc
+					</h2>
+					<div class="card-container">
+						<button id="arc-btn" class="letter">A</button>
+						<div id="arc-card" class="card arc"></div>
+					</div>
+				</div>
+				<div id="card">
+					<h2>
+						Terrain
+					</h2>
+					<div class="card-container">
+						<button id="terrain-btn" class="letter">T</button>
+						<div id="terrain-card" class="card terrain"></div>
+					</div>
+				</div>
+				<div id="card">
+					<h2>
+						Object
+					</h2>
+					<div class="card-container">
+						<button id="object-btn" class="letter">O</button>
+						<div id="object-card" class="card object"></div>
+					</div>
+				</div>
+				<div id="card">
+					<h2>
+						Mood
+					</h2>
+					<div class="card-container">
+						<button id="mood-btn" class="letter">M</button>
+						<div id="mood-card" class="card mood"></div>
+					</div>
+				</div>
+			</div>
+			<p class="disclaimer">AI generated output using Gemini 2.0 Flash-lite model. No responsibility can be taken for the output generated, please exercise your own verifications of any information displayed. Prompts are not saved. This tool is meant for educational purposes.</p>
+			<div id="scenarios">
+				<div id="simple-scenario">
+					<button id="generate-scenario">Generate Scenario ✨</button>
+					<div id="scenario-output" class="scenario-box"></div>
+				</div>
+				<div id="provocation">
+					<button id="provoke-scenario" disabled>Provoke Scenario 🧨</button>
+					<div id="provoke-output" class="scenario-box"></div>
+				</div>
+			</div>
+		    <!-- Help screen -->
+		    <div id="help-modal" class="hidden">
+		      <div class="modal-content">
+		        <h2>What is the tool?</h2>
+				<p>The Thing From The Future was crated by Stuart Candy and Jeff Watson of the Situation Lab at OCAD University, Toronto, Canada. There are various iterations of this tool across the Internet and this is just one that couples it with AI! The card deck is a speculative scenario generation tool for designers as a means to provide ideation and provocation to their design process.</p>
+				<h2>How to use this tool?</h2>
+				<ul>
+					<li>Press the <strong>SHUFFLE ALL</strong> button to shuffle all the cards together</li>
+					<li>Press the <strong>A</strong>, <strong>T</strong>, <strong>O</strong>, or <strong>M</strong> buttons to shuffle individual Arc, Terrain, Object, and Mood cards respecitvely</li>
+					<li>Click the generation link in the Arc card to shuffle the generations</li>
+					<li>Press the <strong>GENERATE SCENARIO ✨</strong> button to have an AI generated scenario of the cards dealt</li>
+					<li>Press the <strong>PROVOKE SCENARIO 🧨</strong> button to provoke the generated scenario using AI for further discussion points</li>
+				</ul>
+		        <span id="help-close-btn" class="close-btn">&times;</span>
+		      </div>
+		    </div>
+		<script src="script.js" defer></script> 
+		<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script> <!-- <script src="gemini.js" defer></script> -->
 	
-	<button id="shuffle-all">Shuffle All</button>
+<!-- BEGIN RETURN LINK -->
+<script>
+// inject-home-link.js
+(function () {
+	// Inject Font Awesome stylesheet
+	const fa = document.createElement("link");
+	fa.rel = "stylesheet";
+	fa.href = "https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.2/css/all.min.css";
+	fa.crossOrigin = "anonymous";
+	document.head.appendChild(fa);
 	
-	<div id="atom">
-	<div id="card">
-		<h2>Arc</h2>
-		<div class="card-container">
-			<button id="arc-btn" class="letter">A</button>
-			<div id="arc-card" class="card arc"></div>
-		</div>
-	</div>
-	<div id="card">
-		<h2>Terrain</h2>
-		<div class="card-container">
-			<button id="terrain-btn" class="letter">T</button>
-			<div id="terrain-card" class="card terrain"></div>
-		</div>
-	</div>
-	<div id="card">
-		<h2>Object</h2>
-		<div class="card-container">
-			<button id="object-btn" class="letter">O</button>
-			<div id="object-card" class="card object"></div>
-		</div>
-	</div>
-	<div id="card">
-		<h2>Mood</h2>
-		<div class="card-container">
-			<button id="mood-btn" class="letter">M</button>
-			<div id="mood-card" class="card mood"></div>
-		</div>
-	</div>
-</div>
-	<button id="generate-scenario">Generate Scenario ✨</button>
-	<button id="provoke-scenario">Provoke Scenario 🧨</button>
-	<div id="scenario-output" class="scenario-box"></div>
-  </main>
-
-  <script src="script.js" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <!-- <script src="gemini.js" defer></script> -->
+	// Create the back link
+	const link = document.createElement("a");
+	link.href = "/playgrounds/";
+	link.innerHTML = '← Back to Playgrounds <i class="fab fa-github"><i>';
+	Object.assign(link.style, {
+	  position: "fixed",
+	  bottom: "20px",
+	  right: "20px",
+	  background: "#000",
+	  color: "#fff",
+	  padding: "8px 12px",
+	  zIndex: 1000,
+	  fontSize: "14px",
+	  opacity: 0.7,
+	  borderRadius: "6px",
+	  textDecoration: "none"
+	});
+	link.onmouseover = () => (link.style.opacity = "1");
+	link.onmouseout = () => (link.style.opacity = "0.7");
+	document.body.appendChild(link);
+})();
+</script>
+<!-- END RETURN LINK -->
 
 </body>
-
 </html>
