Fixed some CSS responsiveness

--- a/projects/future-thing/index.html
+++ b/projects/future-thing/index.html
@@ -54,8 +54,8 @@
 					</div>
 				</div>
 			</div>
-			<p class="disclaimer">AI generated output using Gemini 2.0 Flash-lite model. No responsibility can be taken for the output generated, please exercise your own verifications of any information displayed. Prompts are not saved. This tool is meant for educational purposes.</p>
 			<div id="scenarios">
+			<p class="disclaimer">AI generated output using Gemini 2.0 Flash-lite model. No responsibility can be taken for the output generated, please exercise your own verifications of any information displayed. This tool is meant for educational purposes.</p>
 				<div id="simple-scenario">
 					<button id="generate-scenario">Generate Scenario ✨</button>
 					<div id="scenario-output" class="scenario-box"></div>
@@ -68,15 +68,15 @@
 		    <!-- Help screen -->
 		    <div id="help-modal" class="hidden">
 		      <div class="modal-content">
-		        <h2>What is the tool?</h2>
+		        <h2>What is this tool?</h2>
 				<p>The Thing From The Future was crated by Stuart Candy and Jeff Watson of the Situation Lab at OCAD University, Toronto, Canada. There are various iterations of this tool across the Internet and this is just one that couples it with AI! The card deck is a speculative scenario generation tool for designers as a means to provide ideation and provocation to their design process.</p>
 				<h2>How to use this tool?</h2>
 				<ul>
-					<li>Press the <strong>SHUFFLE ALL</strong> button to shuffle all the cards together</li>
-					<li>Press the <strong>A</strong>, <strong>T</strong>, <strong>O</strong>, or <strong>M</strong> buttons to shuffle individual Arc, Terrain, Object, and Mood cards respecitvely</li>
-					<li>Click the generation link in the Arc card to shuffle the generations</li>
-					<li>Press the <strong>GENERATE SCENARIO ✨</strong> button to have an AI generated scenario of the cards dealt</li>
-					<li>Press the <strong>PROVOKE SCENARIO 🧨</strong> button to provoke the generated scenario using AI for further discussion points</li>
+					<li>The <strong>SHUFFLE ALL</strong> button can be used to shuffle all the cards together</li>
+					<li>The <strong>A</strong>, <strong>T</strong>, <strong>O</strong>, or <strong>M</strong> buttons can shuffle individual Arc, Terrain, Object, and Mood cards respecitvely</li>
+					<li>The generation link in the Arc card can shuffle between different set generations</li>
+					<li>The <strong>GENERATE SCENARIO ✨</strong> button can request an AI generated scenario of the cards dealt</li>
+					<li>The <strong>PROVOKE SCENARIO 🧨</strong> button will attempt to provoke the generated scenario using AI for further discussion points</li>
 				</ul>
 		        <span id="help-close-btn" class="close-btn">&times;</span>
 		      </div>
