semi-working DNA visual

--- a/projects/provocator/index.html
+++ b/projects/provocator/index.html
@@ -58,6 +58,7 @@
 			</div>
 			<button id="generate">Generate Scenario</button>
 			<button id="reset">Reset</button>
+			<button id="toggle-visual" class="button">Switch to DNA Mode</button>
 		</section>
 		
 		<section class="visual">
