Cleaner version of dna mode

--- a/projects/provocator/index.html
+++ b/projects/provocator/index.html
@@ -16,43 +16,43 @@
 				<div class="slider-group">
 					<span class="slider-head">Temporal Distance</span>
 					<span class="label high">Distant Future</span>
-					<input type="range" id="temporal" min="0" max="100" value="0">
+					<input type="range" id="temporal" min="0" max="100" value="0" oninput="onSliderChange()">
 					<span class="label low">Near Future</span>
 				</div>
 				<div class="slider-group">
 					<span class="slider-head">Disruption Level Distance</span>
 					<span class="label high">Radical</span>
-					<input type="range" id="disruption" min="0" max="100" value="0">
+					<input type="range" id="disruption" min="0" max="100" value="0" oninput="onSliderChange()">
 					<span class="label low">Mundane</span>
 				</div>
 				<div class="slider-group">
 					<span class="slider-head">Optimism vs Pessimism</span>
 					<span class="label high">Utopian</span>
-					<input type="range" id="optimism" min="0" max="100" value="0">
+					<input type="range" id="optimism" min="0" max="100" value="0" oninput="onSliderChange()">
 					<span class="label low">Dystopian</span>
 				</div>
 				<div class="slider-group">
 					<span class="slider-head">Human Element</span>
 					<span class="label high">Human-led</span>
-					<input type="range" id="human" min="0" max="100" value="0">
+					<input type="range" id="human" min="0" max="100" value="0" oninput="onSliderChange()">
 					<span class="label low">System-led</span>
 				</div>
 				<div class="slider-group">
 					<span class="slider-head">Technology Influence</span>
 					<span class="label high">High-Tech</span>
-					<input type="range" id="tech" min="0" max="100" value="0">
+					<input type="range" id="tech" min="0" max="100" value="0" oninput="onSliderChange()">
 					<span class="label low">Low-Tech</span>
 				</div>
 				<div class="slider-group">
 					<span class="slider-head">Scale</span>
 					<span class="label high">Planetary</span>
-					<input type="range" id="scale" min="0" max="100" value="0">
+					<input type="range" id="scale" min="0" max="100" value="0" oninput="onSliderChange()">
 					<span class="label low">Personal</span>
 				</div>
 				<div class="slider-group">
 					<span class="slider-head">Obscurity Factor</span>
 					<span class="label high">Absurd</span>
-					<input type="range" id="obscurity" min="0" max="100" value="0">
+					<input type="range" id="obscurity" min="0" max="100" value="0" oninput="onSliderChange()">
 					<span class="label low">Realistic</span>
 				</div>
 			</div>
