Fix CSS issue with table

--- a/projects/future-thing/logs.html
+++ b/projects/future-thing/logs.html
@@ -10,11 +10,13 @@
 		#log-table { width: 100%; border-collapse: collapse; table-layout: fixed; }
 		#log-table th, #log-table td { border: 1px solid #ccc; padding: 8px; vertical-align: top; word-wrap: break-word; }
 		#log-table th:nth-child(1),
-		#log-table td:nth-child(1) { width: 15%; }
+		#log-table td:nth-child(1) { width: 10%; }
 		#log-table th:nth-child(2),
-		#log-table td:nth-child(2) { width: 35%; }
+		#log-table td:nth-child(2) { width: 10%; }
 		#log-table th:nth-child(3),
-		#log-table td:nth-child(3) { width: 50%; }
+		#log-table td:nth-child(3) { width: 40%; }
+		#log-table th:nth-child(4),
+		#log-table td:nth-child(4) { width: 40%; }
 		.prompt-header { display: flex; justify-content: space-between; align-items: center; width: 100%; }
 		.scenario-wrapper { max-height: 100px; overflow: hidden; position: relative; cursor: pointer; }
 		.scenario-wrapper.expanded { max-height: none; }
