--- a/projects/future-thing/logs.html
+++ b/projects/future-thing/logs.html
@@ -105,7 +105,7 @@
 			  }
 			  
 			  submitBtn.onclick = submit;
-			  input.onkeydown = (e) =< {
+			  input.onkeydown = (e) => {
 				  if (e.key === "Enter") submit();
 			  };
 		  });
