fix baseurls for back jump

--- a/projects/emojidice/index.html
+++ b/projects/emojidice/index.html
@@ -40,7 +40,7 @@
 	
 	// Create the back link
 	const link = document.createElement("a");
-	link.href = "/playgrounds/";
+	link.href = "/";
 	link.innerHTML = '← Back to Playgrounds <i class="fab fa-github"><i>';
 	Object.assign(link.style, {
 	  position: "fixed",
