--- a/projects/rail/index.html
+++ b/projects/rail/index.html
@@ -475,7 +475,7 @@ root=this,factory=function(){var e,t,n=Function.call.bind(Function.apply),r=Func
 	
 	// Create the back link
 	const link = document.createElement("a");
-	link.href = "/playgrounds/";
+	link.href = "/";
 	link.innerHTML = '← Back to Playgrounds <i class="fab fa-github"><i>';
 	Object.assign(link.style, {
 	  position: "fixed",
