--- a/projects/design-methods/index.html
+++ b/projects/design-methods/index.html
@@ -76,7 +76,7 @@
 	
 	// Create the back link
 	const link = document.createElement("a");
-	link.href = "/playgrounds/";
+	link.href = "/";
 	link.innerHTML = '← Back to Playgrounds <i class="fab fa-github"><i>';
 	Object.assign(link.style, {
 	  position: "fixed",
